Fix a bug where long tasks don't wrap correctly

--- a/css/include/list.styl
+++ b/css/include/list.styl
@@ -44,9 +44,8 @@
       overflow hidden
 
     label
+      max-width 80%
       font-weight 500
-      float left
-      display block
       padding-left 28px
       text-indent -28px
       font-size font-small
