--- a/css/include/responsive.styl
+++ b/css/include/responsive.styl
@@ -24,6 +24,9 @@
       position relative
       padding-right 100px
 
+      label
+        max-width 100%
+
       .priority
         position absolute
         top 10px
